--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "*",
         "brian2694/laravel-toastr": "^5.5",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0",
-        "ext-gd": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
